--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
-title: Modernist theme
-description: Modernist is a theme for GitHub Pages.
+title: Minimal theme
+logo: /assets/img/logo.png
+description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-modernist
+theme: jekyll-theme-minimal
 
 minimal_mistakes_skin: "aqua" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
