--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
 title: Minimal theme
-logo: /assets/img/logo.png
+logo: /assets/img/logo.jpg
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
 
-minimal_mistakes_skin: "aqua" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin: "contrast" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 plugins:
   - jekyll-remote-theme 
   - jekyll-include-cache # add this line to the plugins list if you already have one
   - jekyll-paginate
 
-title: hola ASIR2
+title: Kuumii3's Page
 
 defaults:
   - scope:
