--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
-title: Merlot theme
-description: Merlot is a theme for GitHub Pages.
+title: Minimal theme
+logo: /assets/img/logo.jpg
+description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-merlot
+theme: jekyll-theme-minimal
 
 minimal_mistakes_skin: "contrast" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
