--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,8 @@
-title: Minimal theme
-logo: /assets/img/logo.jpg
-description: Minimal is a theme for GitHub Pages.
+title: Merlot theme
+description: Merlot is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-minimal
-
-minimal_mistakes_skin: "contrast" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+theme: jekyll-theme-merlot
 
 plugins:
   - jekyll-remote-theme 
@@ -43,8 +40,6 @@ paginate_path: /blog/page:num/
 
 
 
-minima:
-  skin: dark
 
 name: xio
   
